feat: smtp config endpoints
